--- a/package.json
+++ b/package.json
@@ -8,17 +8,20 @@
     "start": "next start",
     "lint": "next lint",
     "db:push": "npx drizzle-kit push",
-    "db:studio":"npx drizzle-kit studio"
+    "db:studio": "npx drizzle-kit studio"
   },
   "dependencies": {
     "@clerk/nextjs": "^5.1.0",
+    "@google/generative-ai": "^0.11.3",
     "@neondatabase/serverless": "^0.9.3",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.30.10",
     "lucide-react": "^0.379.0",
+    "moment": "^2.30.1",
     "next": "14.2.3",
     "postgres": "^3.4.4",
     "react": "^18",
