--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@clerk/nextjs": "^5.1.0",
     "@google/generative-ai": "^0.11.3",
     "@neondatabase/serverless": "^0.9.3",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
@@ -28,9 +29,11 @@
     "lucide-react": "^0.379.0",
     "moment": "^2.30.1",
     "next": "14.2.3",
+    "next-themes": "^0.3.0",
     "postgres": "^3.4.4",
     "react": "^18",
     "react-dom": "^18",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
