--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.30.10",
+    "framer-motion": "^11.2.6",
     "lucide-react": "^0.379.0",
     "moment": "^2.30.1",
     "next": "14.2.3",
