--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.30.10",
@@ -31,9 +33,11 @@
     "lucide-react": "^0.379.0",
     "moment": "^2.30.1",
     "next": "14.2.3",
+    "next-seo": "^6.5.0",
     "next-themes": "^0.3.0",
     "postgres": "^3.4.4",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
     "react-web-share": "^2.0.2",
